timeware/src/objects/Pay_Code__c.object
<CustomObject>
    <description>Pay Code contains an entry for each absence category.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Benefit_Code__c</fullName>
        <label>Alternate Benefit Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_Accrual_Restriction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only display if &quot;Enable Accrual Tracking&apos; is true.</description>
        <label>Apply Accrual Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counts_As_Worked_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counts As Worked Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counts_Toward_Overtime__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Counts Toward Overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earnings_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earnings Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Accrual_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Accrual Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Incidents_Points_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Incidents/Points Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Accrued_Hours__c</fullName>
        <description>Only display if &quot;Enable Accrual Tracking&apos; is true.</description>
        <label>Initial Accrued Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_Earning_Code__c</fullName>
        <label>Payroll Earning Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Pay Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pay Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>